# datagrepper

./: .cico.pipeline  .gitignore  .mergify.yml  .packit.yaml  .pre-commit-config.yaml  .travis.yml  API.rst  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  Vagrantfile  createdb  createdb.py  datagrepper.spec  development.cfg  pyproject.toml  requirements.txt  runserver  runserver.py  setup.cfg  setup.py  shell  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: pre-commit-autoupdate.yml  tests.yml
.s2i/: environment
apache/: datagrepper.cfg  datagrepper.conf  datagrepper.wsgi
datagrepper/: API.rst  __init__.py  app.py  dataquery.py  default_config.py  forms.py  models.py  runner.py  users.py  util.py  widgets.py
datagrepper/docs/: Makefile  charts.rst  conf.py  contributing.rst  index.rst  reference.rst  release_notes.rst  widget.rst
datagrepper/old-templates/: base.html  index.html  login.html
datagrepper/static/: autoscroll.js  live.js  odometer.js
datagrepper/static/css/: fedora-bootstrap-fonts.css  main.css  odometer-theme-car.css  odometer.css  raw.css
datagrepper/templates/: _footer.html  _head.html  _header.html  base.html  count.html  index.html  msg.html  raw.html  user.html
devel/: development.cfg  run-liccheck.sh  runserver.py
devel/ansible/: ansible.cfg  datagrepper.yml
devel/ansible/roles/datagrepper/files/: .bashrc  datagrepper.service  datanommer.service  motd
devel/ansible/roles/datagrepper/tasks/: main.yml
devel/ansible/roles/datagrepper/templates/: fedora-messaging.toml.j2
devel/ansible/roles/datanommer/files/: alembic.ini  fedora-messaging.toml
devel/ansible/roles/datanommer/tasks/: main.yml
devel/ansible/roles/postgresql/tasks/: main.yml
fedmsg.d/: example-datagrepper.py  example-datanommer.py  fedmsg-config.py
news/: 264.bic  264.dev  291.feature  537.bug  708.dependency  _template.rst.j2  get-authors.py
tests/: generate-docs.sh  test_api.py  test_cors.py  test_timerange.py
