[tool.poetry]
name = "datagrepper"
version = "1.0.0"
description = "A webapp to query datanommer"
authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/fedora-infra/datagrepper"
homepage = "https://github.com/fedora-infra/datagrepper"

include = [
    "apache/*",
    "devel/*",
    "tests/*",
]

[tool.poetry.dependencies]
python = "^3.7"
"datanommer.models" = "^1.0.0"
arrow = "^1.1.1"
docutils = "^0.17.1"
flask = "^1.1"
"moksha.common" = "^1.2.5"
pygal = "^2.4.0"
Pygments = "^2.9.0"
python-dateutil = "^2.8.2"
psycopg2 = "^2.9.1"
cffi = "^1.14.6"
gunicorn = {version = "^20.0", optional = true}
SQLAlchemy = "<1.4.23"
flask-healthz = "^0.0.1"
anitya-schema = {version = "^2.0.0", optional = true}
fedora-messaging-the-new-hotness-schema = {version = "^1.1.0", optional = true}
bodhi-messages = {version = "^5.5", optional = true}
fedocal-messages = {version = "^1.5.0", optional = true}
fedora-planet-messages = {version = "^1.0.0", optional = true}
noggin-messages = {version = "^1.0.0", optional = true}
fedorainfra-ansible-messages = {version = "*", optional = true}
nuancier-messages = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.6b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
pytest = "^6.2.4"
liccheck = "^0.6.0"
Sphinx = "^4.0.3"
pytest-cov = "^2.12.1"
towncrier = "^21.3.0"

[tool.poetry.extras]
deploy = ["gunicorn"]
schemas = [
  "anitya-schema",
  "fedora-messaging-the-new-hotness-schema",
  "bodhi-messages",
  "fedocal-messages",
  "fedora-planet-messages",
  "noggin-messages",
  "fedorainfra-ansible-messages",
  "nuancier-messages",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[tool.black]
target-version = ["py36"]

[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache software",
  "Apache License 2.0",
  "Apache License, Version 2.0",
  "gnu lgpl",
  "gpl v2",
  "GNU General Public License v2 or later (GPLv2+)",
  "GNU General Public License v3 (GPLv3)",
  "GNU General Public License v3 or later (GPLv3+)",
  "GNU Library or Lesser General Public License (LGPL)",
  "GNU Lesser General Public License v2 or later (LGPLv2+)",
  "GNU Lesser General Public License v3 or later (LGPLv3+)",
  "GPLv3+",
  "LGPLv2+",
  "gpl v3",
  "lgpl with exceptions or zpl",
  "isc",
  "isc license (iscl)",
  "mit",
  "python software foundation",
  "zpl 2.1",
  "mpl-2.0",
  "MPL 2.0",
  "Mozilla Public License 2.0 (MPL 2.0)",
  "lgpl",
  "CC0 (copyright waived)",
  "Public Domain",
  "Public Domain <http://unlicense.org>",
  "Zope Public",
]

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing --cov-report html --cov-report xml"

[tool.coverage.run]
branch = true
source = ["datagrepper"]
omit = ['datagrepper/__init__.py']


[tool.coverage.paths]
source = ["datagrepper"]

[tool.coverage.report]
fail_under = 63
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.towncrier]
package = "datagrepper"
filename = "datagrepper/docs/release_notes.rst"
directory = "news/"
title_format = "v{version}"
issue_format = "{issue}"
template = "news/_template.rst.j2"
underlines = "=^-"
wrap = true
all_bullets = true

  [[tool.towncrier.type]]
  directory = "bic"
  name = "Backwards Incompatible Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dependency"
  name = "Dependency Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bug"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dev"
  name = "Development Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Documentation Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "author"
  name = "Contributors"
  showcontent = true
