[tool.poetry]
name = "datagrepper"
version = "1.1.0"
description = "A webapp to query datanommer"
authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/fedora-infra/datagrepper"
homepage = "https://github.com/fedora-infra/datagrepper"

packages = [
    { include = "datagrepper" },
    { include = "tests", format = "sdist" },
]

include = [
    { path = "apache/*", format = "sdist" },
    { path = "devel/*", format = "sdist" },
    { path = "COPYING", format = "sdist" },
    { path = "datagrepper/docs/*", format = "sdist" },
]

exclude = [
    { path = "datagrepper/docs/_build", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.10"
"datanommer.models" = "^1.0.0"
arrow = "^1.1.1"
docutils = ">=0.16"
flask = ">=2.0.1"
fedora-messaging = ">=2.1.0"
"moksha.common" = "^1.2.5"
pygal = ">=2.4.0"
Pygments = "^2.9.0"
python-dateutil = "^2.8.1"
psycopg2 = "^2.9.1"
cffi = "^1.14.6"
gunicorn = {version = "^20.0 || ^21.0.0", optional = true}
SQLAlchemy = "^1.4.0"
flask-healthz = "^0.0.3"
anitya-schema = {version = "*", optional = true}
bodhi-messages = {version = "*", optional = true}
copr-messaging = {version = "*", optional = true}
discourse2fedmsg-messages = {version = "*", optional = true}
fedocal-messages = {version = "*", optional = true}
fedorainfra-ansible-messages = {version = "*", optional = true}
fedora-messaging-the-new-hotness-schema = {version = "*", optional = true}
fedora-planet-messages = {version = "*", optional = true}
mdapi-messages = {version = "*", optional = true}
noggin-messages = {version = "*", optional = true}
nuancier-messages = {version = "*", optional = true}
pagure-messages = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0 || ^3.0.0"
black = "^22.3.0 || ^23.0.0"
isort = "^5.9.2"
flake8 = "^4.0.0 || ^5.0.0 || ^6.0.0"
pytest = "^7.1.0"
liccheck = "^0.6.0 || ^0.9.0"
Sphinx = "^4.3.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
pytest-cov = "^3.0.0 || ^4.0.0"
towncrier = "^21.3.0 || ^23.0.0"

[tool.poetry.extras]
deploy = ["gunicorn"]
schemas = [
  "anitya-schema",
  "bodhi-messages",
  "copr-messaging",
  "discourse2fedmsg-messages",
  "fedocal-messages",
  "fedorainfra-ansible-messages",
  "fedora-elections-messages",
  "fedora-messaging-the-new-hotness-schema",
  "fedora-planet-messages",
  "mdapi-messages",
  "noggin-messages",
  "nuancier-messages",
  "pagure-messages",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[tool.black]
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing --cov-report html --cov-report xml"

[tool.coverage.run]
branch = true
source = ["datagrepper"]
omit = ['datagrepper/__init__.py']


[tool.coverage.paths]
source = ["datagrepper"]

[tool.coverage.report]
fail_under = 63
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.towncrier]
package = "datagrepper"
filename = "datagrepper/docs/release_notes.rst"
directory = "news/"
title_format = "v{version}"
issue_format = "{issue}"
template = "news/_template.rst.j2"
underlines = "=^-"
wrap = true
all_bullets = true

  [[tool.towncrier.type]]
  directory = "bic"
  name = "Backwards Incompatible Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dependency"
  name = "Dependency Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bug"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dev"
  name = "Development Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Documentation Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "author"
  name = "Contributors"
  showcontent = true
